# pasf

./: README.md
api/: README.md  pyproject.toml
api/app/: __init__.py  __main__.py  asgi.py  errors.py
api/app/domain/cards/: __init__.py  schemas.py  urls.py
api/app/domain/cards/controllers/: __init__.py  card_controller.py  deck_controller.py  tag_controller.py
api/app/domain/system/: __init__.py  schemas.py
api/app/domain/system/controllers/: __init__.py  system_controller.py
api/app/server/: __init__.py  core.py
api/tests/: conftest.py  data_fixtures.py
api/tests/integration/: conftest.py  test_health.py
db/: erd.drawio  schema.sql
web/: package-lock.json  package.json
