[tool.poetry]
name = "pasf-api"
version = "0.1.0"
package-mode = false
description = "Flashcards app."
authors = ["Dunc4nNT <76918336+Dunc4nNT@users.noreply.github.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/Dunc4nNT/pasf"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = { version = "^0.33.0", extras = ["standard"] }
anyio = "^4.7.0"
litestar = { version = "^2.13.0", extras = ["pydantic"] }


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"


[tool.ruff]
target-version = "py312"
line-length = 99
preview = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PLE",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "D100",
    "D104",

    # ruff conflicting lint rules
    # source: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
]
unfixable = ["E501", "ERA"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "DOC", "S101"]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.pyright]
include = ["app", "tests"]

pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
reportPropertyTypeMismatch = "error"
reportImportCycles = "error"
reportUnusedImport = "error"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportConstantRedefinition = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMatchNotExhaustive = "warning"
reportImplicitOverride = "warning"
reportShadowedImports = "error"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
